--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
         <span>Power BI</span><span>Predictive Analytics</span><span>Dashboards</span><span>Data Visualization</span>
       </div>
     </div>
+
+    <div class="exp-card">
+      <div class="exp-header">
+        <img src="assets/limbitless-logo.jpeg" alt="Limbitless Solutions" class="exp-logo">
+        <div class="exp-info">
+          <h3>Limbitless Solutions</h3>
+          <p class="exp-title">Data & Research Intern — Aug 2022 - Dec 2022</p>
+        </div>
+      </div>
+      <ul class="exp-list">
+        <li>Analyzed gamified training data for myoelectric prosthetics using R.</li>
+        <li>Created interactive visualizations and statistical reports for research publications.</li>
+        <li>Contributed to a manuscript on reinforcement learning in educational gaming environments.</li>
+      </ul>
+      <div class="skill-tags">
+        <span>R</span><span>ggplot2</span><span>dplyr</span><span>Reinforcement Learning</span>
+      </div>
+    </div>
   </section>
 
   <section id="projects" class="distinct-section fade-in">
