--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <p class="project-extra">
           The system generated personalized suggestions across media formats like movies, books, and music using collaborative filtering.
-          <br><a href="https://github.com/mcont55" class="project-link" target="_blank">View Project</a>
+          <br><a href="https://github.com/mcont55/song-recommendation-prototype" class="project-link" target="_blank">View Project</a>
         </p>
         <div class="click-hint">Click to see more</div>
       </div>
