--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
   <section id="about" class="distinct-section fade-in">
     <h2>About Me</h2>
     <p>
-      I'm a passionate Data Science student at UCF with a minor in Statistics. I thrive on transforming data into impactful solutions and currently work as an Operations Analyst Intern at BNY Mellon. I love using analytics to drive insight and creativity — whether it’s building interactive dashboards or modeling trends with code, I'm always exploring the intersection of logic and design.
+    I’m a data science graduate with a background in statistics and a focus on building tools that make data easier to use. I’ve worked on interactive dashboards in Power BI, helped automate processes at BNY Mellon to improve reporting, and used R to analyze behavioral data for research at UCF and Limbitless Solutions.
+    </p>
+    <p>
+    I’m interested in data science and analytics roles where I can keep building my skills, take on projects that challenge me, and turn data into insights that make a real impact.
+    </p>
+    <p>
+    In my free time, I love to play tennis with my family and learn different types of Bollywood dances.
     </p>
   </section>
 
