--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maria Contractor | Data Analyst</title>
-  <link rel="stylesheet" href="style.css?v=5" />
+  <title>Maria Contractor | Data Science & Analytics</title>
+  <link rel="stylesheet" href="style.css?v=6" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -17,11 +17,12 @@
         <li><a href="#projects">Projects</a></li>
       </ul>
     </nav>
+
     <div class="hero fade-in">
       <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic large">
       <h1>Maria Contractor</h1>
       <p class="tagline highlight"><span id="typed"></span></p>
-      <p class="tagline">Python | Power BI | SQL | R | AI | Visualization</p>
+      <p class="tagline">Python • SQL • Power BI • PyTorch • Flask</p>
       <div class="resume-container">
         <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume</a>
         <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇</a>
@@ -32,70 +33,106 @@
   <section id="about" class="distinct-section fade-in">
     <h2>About Me</h2>
     <p>
-    I’m a data science graduate with a background in statistics and a focus on building tools that make data easier to use. I’ve worked on interactive dashboards in Power BI, helped automate processes at BNY Mellon to improve reporting, and used R to analyze behavioral data for research at UCF and Limbitless Solutions.
+      I’m a Data Science graduate (B.S., minor in Statistics) and Hedge Funds Analyst at BNY Mellon. I build dashboards, predictive models, and automation that save time, surface risks, and drive decisions at scale.
     </p>
     <p>
-    I’m interested in data science and analytics roles where I can keep building my skills, take on projects that challenge me, and turn data into insights that make a real impact.
+      Strengths: translating business problems into **Python/SQL/Power BI** solutions, deploying ML with **Flask/Heroku**, and communicating results for non-technical stakeholders.
     </p>
     <p>
-    In my free time, I love to play tennis with my family and learn different types of Bollywood dances.
+      Target: data science & analytics roles in New York where I can deliver measurable impact across finance and enterprise analytics.
     </p>
   </section>
 
   <section id="experience" class="distinct-section fade-in">
     <h2>Experience</h2>
 
+    <!-- BNY – Hedge Funds Analyst -->
     <div class="exp-card">
       <div class="exp-header">
         <img src="assets/bny-logo.jpg" alt="BNY" class="exp-logo">
         <div class="exp-info">
-          <h3>BNY</h3>
-          <p class="exp-title">Operations Analyst Intern — May 2024 - Aug 2024</p>
+          <h3>BNY Mellon</h3>
+          <p class="exp-title">Hedge Funds Analyst — Aug 2025 – Present</p>
         </div>
       </div>
       <ul class="exp-list">
-        <li>Optimized and automated global payment workflows using Power BI and Microsoft Visio.</li>
-        <li>Built interactive dashboards to track operational KPIs and reduce manual reporting time.</li>
-        <li>Collaborated with cross-functional teams to ensure accurate financial reconciliation.</li>
+        <li>Built a <strong>Power BI</strong> dashboard tracking digital tool usage; quantified <strong>100+ hours saved/month</strong>.</li>
+        <li>Modernizing hedge fund workflows to drive automation and risk reduction across <strong>$50B+ AUM</strong>.</li>
       </ul>
       <div class="skill-tags">
-        <span>Power BI</span><span>Workflow Mapping</span><span>Financial Systems</span><span>Visio</span>
+        <span>Power BI</span><span>Python</span><span>SQL</span><span>Automation</span>
       </div>
     </div>
 
+    <!-- BNY – Global Compliance & Risk -->
+    <div class="exp-card">
+      <div class="exp-header">
+        <img src="assets/bny-logo.jpg" alt="BNY" class="exp-logo">
+        <div class="exp-info">
+          <h3>BNY Mellon</h3>
+          <p class="exp-title">Global Compliance & Risk Analyst Intern — Jun 2024 – Aug 2024</p>
+        </div>
+      </div>
+      <ul class="exp-list">
+        <li>Built <strong>Power BI</strong> dashboards for liquidity & cash management, giving visibility into <strong>thousands of daily transactions</strong>.</li>
+        <li>Created <strong>Visio</strong> maps for <strong>10+</strong> treasury workflows; highlighted automation opportunities.</li>
+      </ul>
+      <div class="skill-tags">
+        <span>Power BI</span><span>Liquidity</span><span>Cash Management</span><span>Visio</span>
+      </div>
+    </div>
+
+    <!-- UCF – Research Assistant -->
     <div class="exp-card">
       <div class="exp-header">
         <img src="assets/ucf-logo.png" alt="UCF" class="exp-logo">
         <div class="exp-info">
           <h3>University of Central Florida</h3>
-          <p class="exp-title">Data Analytics Research Assistant — Jan 2023 - May 2024</p>
+          <p class="exp-title">Data Analytics Research Assistant — Aug 2024 – May 2025</p>
         </div>
       </div>
       <ul class="exp-list">
-        <li>Built a real-time contact tracking system in Power BI to support faculty engagement.</li>
-        <li>Analyzed engagement trends and delivered reports for strategic planning.</li>
-        <li>Developed predictive analytics models to forecast student participation.</li>
+        <li>Engineered a <strong>Power BI</strong> dashboard tracking contracts for <strong>926</strong> grad students with real-time status.</li>
+        <li>Automated cumulative/weekly views; cut manual tracking by ~<strong>40%</strong> across <strong>10+ departments</strong>.</li>
       </ul>
       <div class="skill-tags">
-        <span>Power BI</span><span>Predictive Analytics</span><span>Dashboards</span><span>Data Visualization</span>
+        <span>Power BI</span><span>Predictive Analytics</span><span>Data Visualization</span>
       </div>
     </div>
 
+    <!-- Limbitless Solutions -->
     <div class="exp-card">
       <div class="exp-header">
         <img src="assets/limbitless-logo.jpeg" alt="Limbitless Solutions" class="exp-logo">
         <div class="exp-info">
           <h3>Limbitless Solutions</h3>
-          <p class="exp-title">Data & Research Intern — Aug 2022 - Dec 2022</p>
+          <p class="exp-title">Data & Research Intern — May 2023 – Dec 2023</p>
         </div>
       </div>
       <ul class="exp-list">
-        <li>Analyzed gamified training data for myoelectric prosthetics using R.</li>
-        <li>Created interactive visualizations and statistical reports for research publications.</li>
-        <li>Contributed to a manuscript on reinforcement learning in educational gaming environments.</li>
+        <li>Created <strong>R</strong> visualizations (<em>dplyr</em>, <em>ggplot2</em>) showing a <strong>10%+</strong> lift in pediatric engagement.</li>
+        <li>Contributed to a manuscript <strong>(pending publication)</strong> on reinforcement-learning agents for rehab gaming.</li>
       </ul>
       <div class="skill-tags">
-        <span>R</span><span>ggplot2</span><span>dplyr</span><span>Reinforcement Learning</span>
+        <span>R</span><span>dplyr</span><span>ggplot2</span><span>Reinforcement Learning</span>
+      </div>
+    </div>
+
+    <!-- Data Glacier -->
+    <div class="exp-card">
+      <div class="exp-header">
+        <img src="assets/dg-logo.png" alt="Data Glacier" class="exp-logo">
+        <div class="exp-info">
+          <h3>Data Glacier</h3>
+          <p class="exp-title">Data Science Intern — May 2023 – Aug 2023</p>
+        </div>
+      </div>
+      <ul class="exp-list">
+        <li>Deployed a <strong>Flask + Heroku</strong> app hosting a <strong>linear regression</strong> model trained on <strong>10K+</strong> records.</li>
+        <li>Transformed & analyzed <strong>50K+</strong> cab records in Python; comparative analysis surfaced key investment factors.</li>
+      </ul>
+      <div class="skill-tags">
+        <span>Python</span><span>Flask</span><span>Heroku</span><span>ETL</span>
       </div>
     </div>
   </section>
@@ -103,37 +140,56 @@
   <section id="projects" class="distinct-section fade-in">
     <h2>Projects</h2>
     <div class="project-grid">
+
+      <!-- LLM Project -->
       <div class="project-card">
-        <h3>Branch Optimization Model</h3>
-        <p>Predicted best locations for bank branches using Python, R, and SQL.</p>
+        <h3>Enterprise LLM Evaluation & Deployment</h3>
+        <p>Benchmarked <strong>12 LLMs</strong> on runtime, cost, and scalability; identified <strong>40%</strong> efficiency gains and potential <strong>$100K+</strong> annual savings via secure open-source adoption.</p>
         <div class="skill-tags left-align">
-          <span>Python</span><span>R Studio</span><span>SQL</span><span>Financial Modeling</span><span>Geospatial Analysis</span>
+          <span>Python</span><span>LLM Evaluation</span><span>Prompt Engineering</span><span>AI Governance</span>
         </div>
         <p class="project-extra">
-          This project combined customer data and spatial clustering to identify underserved regions and recommend optimal branch locations.
-          <br><a href="#" class="project-link" target="_blank">View Project</a>
+          Delivered an executive roadmap minimizing vendor lock-in and aligning adoption with compliance and scale.
+          <!-- Optional: link to slide deck if you host it -->
+          <!-- <br><a href="assets/llm_roadmap.pdf" class="project-link" target="_blank">View Project</a> -->
         </p>
         <div class="click-hint">Click to see more</div>
       </div>
 
+      <!-- Addition Financial -->
       <div class="project-card">
-        <h3>Media Recommendation Engine</h3>
-        <p>Built a universal recommender system using PyTorch and matrix factorization.</p>
+        <h3>Addition Financial Analytics</h3>
+        <p>Queried demographic/economic data in <strong>SQL/Python</strong> to assess branch expansion; projections showed <strong>10–12%</strong> market reach lift and <strong>$5M+</strong> deposits.</p>
         <div class="skill-tags left-align">
-          <span>PyTorch</span><span>Matrix Factorization</span><span>Data Pipelines</span><span>AI Personalization</span>
+          <span>Python</span><span>SQL</span><span>Geospatial</span><span>Financial Analytics</span>
         </div>
         <p class="project-extra">
-          The system generated personalized suggestions across media formats like movies, books, and music using collaborative filtering.
+          Modeled population density, income, and local behavior to rank candidate sites for network growth.
+          <!-- <br><a href="#" class="project-link" target="_blank">View Project</a> -->
+        </p>
+        <div class="click-hint">Click to see more</div>
+      </div>
+
+      <!-- Multus Medium -->
+      <div class="project-card">
+        <h3>Multus Medium (Recommendation System)</h3>
+        <p>Implemented <strong>matrix factorization</strong> in <strong>PyTorch</strong> for cross-media personalization; improved relevance by ~<strong>10–15%</strong> vs. baseline.</p>
+        <div class="skill-tags left-align">
+          <span>PyTorch</span><span>Recommenders</span><span>Matrix Factorization</span><span>AI Personalization</span>
+        </div>
+        <p class="project-extra">
+          Designed for scalable user–item pipelines and evaluation; code available on GitHub.
           <br><a href="https://github.com/mcont55/song-recommendation-prototype" class="project-link" target="_blank">View Project</a>
         </p>
         <div class="click-hint">Click to see more</div>
       </div>
+
     </div>
   </section>
 
   <footer>
-    <p>© 2025 Maria Contractor | 
-      GitHub: <a href="https://github.com/mcont55" target="_blank">mcont55</a> | 
+    <p>© 2025 Maria Contractor |
+      GitHub: <a href="https://github.com/mcont55" target="_blank">mcont55</a> |
       LinkedIn: <a href="https://www.linkedin.com/in/maria-contractor" target="_blank">maria-contractor</a><br>
       Email: <strong><a href="mailto:macont55@gmail.com">macont55@gmail.com</a></strong>
     </p>
@@ -142,6 +198,21 @@
   <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="script.js?v=5"></script>
+  <script>
+    // typing effect keywords tuned for NYC roles
+    new Typed('#typed', {
+      strings: [
+        'Data Science • Finance Analytics',
+        'Python • SQL • Power BI',
+        'LLM Evaluation • Automation',
+        'ML Deployment • PyTorch'
+      ],
+      typeSpeed: 45,
+      backSpeed: 25,
+      backDelay: 1400,
+      loop: true
+    });
+  </script>
+  <script src="script.js?v=6"></script>
 </body>
 </html>
