--- a/index.html
+++ b/index.html
@@ -197,22 +197,7 @@
 
   <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
 
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script>
-    // typing effect keywords tuned for NYC roles
-    new Typed('#typed', {
-      strings: [
-        'Data Science • Finance Analytics',
-        'Python • SQL • Power BI',
-        'LLM Evaluation • Automation',
-        'ML Deployment • PyTorch'
-      ],
-      typeSpeed: 45,
-      backSpeed: 25,
-      backDelay: 1400,
-      loop: true
-    });
-  </script>
+  <!-- Removed the Typed.js animation -->
   <script src="script.js?v=6"></script>
 </body>
 </html>
