--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
 
   <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
 
-  <!-- Removed the Typed.js animation -->
+  <!-- Keep only this, your main script -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="script.js?v=6"></script>
 </body>
 </html>
