--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Maria Contractor | Data Science & Analytics</title>
-  <link rel="stylesheet" href="style.css?v=6" />
+  <link rel="stylesheet" href="style.css?v=7" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -13,11 +13,11 @@
       <div class="nav-left">Maria Contractor</div>
       <ul class="nav-right">
         <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
       </ul>
     </nav>
-
     <div class="hero fade-in">
       <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic large">
       <h1>Maria Contractor</h1>
@@ -36,11 +36,43 @@
       I’m a Data Science graduate (B.S., minor in Statistics) and Hedge Funds Analyst at BNY Mellon. I build dashboards, predictive models, and automation that save time, surface risks, and drive decisions at scale.
     </p>
     <p>
-      Strengths: translating business problems into **Python/SQL/Power BI** solutions, deploying ML with **Flask/Heroku**, and communicating results for non-technical stakeholders.
+      Strengths: translating business problems into <strong>Python/SQL/Power BI</strong> solutions, deploying ML with <strong>Flask/Heroku</strong>, and communicating results for non-technical stakeholders.
     </p>
     <p>
       Target: data science & analytics roles in New York where I can deliver measurable impact across finance and enterprise analytics.
     </p>
+  </section>
+
+  <!-- SKILLS SECTION -->
+  <section id="skills" class="distinct-section fade-in">
+    <h2>Skills</h2>
+
+    <div class="skill-tags">
+      <strong>Languages</strong>
+      <span>Python</span><span>SQL</span><span>R</span><span>Java</span><span>JavaScript</span><span>C</span>
+    </div>
+
+    <div class="skill-tags">
+      <strong>Data Science & ML</strong>
+      <span>pandas</span><span>NumPy</span><span>scikit-learn</span><span>PyTorch</span>
+      <span>Recommenders</span><span>Linear Regression</span><span>LLM Evaluation</span>
+    </div>
+
+    <div class="skill-tags">
+      <strong>Visualization & BI</strong>
+      <span>Power BI</span><span>Tableau</span><span>matplotlib</span><span>seaborn</span><span>ggplot2</span>
+    </div>
+
+    <div class="skill-tags">
+      <strong>Deployment & Tools</strong>
+      <span>Flask</span><span>Heroku</span><span>Git/GitHub</span><span>Microsoft Visio</span>
+    </div>
+
+    <div class="skill-tags">
+      <strong>Domains</strong>
+      <span>Finance Analytics</span><span>Liquidity & Treasury</span><span>Hedge Funds</span>
+      <span>Automation</span><span>Dashboards</span>
+    </div>
   </section>
 
   <section id="experience" class="distinct-section fade-in">
@@ -150,8 +182,6 @@
         </div>
         <p class="project-extra">
           Delivered an executive roadmap minimizing vendor lock-in and aligning adoption with compliance and scale.
-          <!-- Optional: link to slide deck if you host it -->
-          <!-- <br><a href="assets/llm_roadmap.pdf" class="project-link" target="_blank">View Project</a> -->
         </p>
         <div class="click-hint">Click to see more</div>
       </div>
@@ -165,7 +195,6 @@
         </div>
         <p class="project-extra">
           Modeled population density, income, and local behavior to rank candidate sites for network growth.
-          <!-- <br><a href="#" class="project-link" target="_blank">View Project</a> -->
         </p>
         <div class="click-hint">Click to see more</div>
       </div>
@@ -197,8 +226,7 @@
 
   <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
 
-  <!-- Keep only this, your main script -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="script.js?v=6"></script>
+  <script src="script.js?v=7"></script>
 </body>
 </html>
