--- a/index.html
+++ b/index.html
@@ -30,18 +30,16 @@
     </div>
   </header>
 
-  <section id="about" class="distinct-section fade-in">
-    <h2>About Me</h2>
-    <p>
-      I’m a Data Science graduate (B.S., minor in Statistics) and Hedge Funds Analyst at BNY Mellon. I build dashboards, predictive models, and automation that save time, surface risks, and drive decisions at scale.
-    </p>
-    <p>
-      Strengths: translating business problems into <strong>Python/SQL/Power BI</strong> solutions, deploying ML with <strong>Flask/Heroku</strong>, and communicating results for non-technical stakeholders.
-    </p>
-    <p>
-      Target: data science & analytics roles in New York where I can deliver measurable impact across finance and enterprise analytics.
-    </p>
-  </section>
+<section id="about" class="distinct-section fade-in">
+  <h2>About Me</h2>
+  <p>
+    I’m Maria Contractor, a Data Science graduate with a background in statistics and a passion for solving problems at the intersection of **finance and technology**. Right now, I work as a Hedge Funds Analyst at BNY Mellon, where I focus on **building dashboards, streamlining workflows, and uncovering insights** that make complex operations more efficient and transparent.
+  </p>
+  <p>
+    I enjoy projects that blend **analytics, automation, and strategy**—whether that’s evaluating large language models for enterprise use, designing predictive dashboards, or deploying machine learning models. Outside of work, you’ll usually find me on the tennis court with my family or learning new Bollywood dance styles, which helps me bring creativity and energy into everything I do.
+  </p>
+</section>
+
 
   <!-- SKILLS SECTION -->
   <section id="skills" class="distinct-section fade-in">
