--- a/index.html
+++ b/index.html
@@ -43,35 +43,31 @@
 
   <!-- SKILLS SECTION -->
   <section id="skills" class="distinct-section fade-in">
-    <h2>Skills</h2>
-
-    <div class="skill-tags">
-      <strong>Languages</strong>
-      <span>Python</span><span>SQL</span><span>R</span><span>Java</span><span>JavaScript</span><span>C</span>
+  <h2>Skills</h2>
+  <div class="skills-grid">
+    <div>
+      <strong>Languages</strong><br>
+      Python, SQL, R, C
     </div>
-
-    <div class="skill-tags">
-      <strong>Data Science & ML</strong>
-      <span>pandas</span><span>NumPy</span><span>scikit-learn</span><span>PyTorch</span>
-      <span>Recommenders</span><span>Linear Regression</span><span>LLM Evaluation</span>
+    <div>
+      <strong>Data Science & ML</strong><br>
+      pandas, NumPy, scikit-learn, PyTorch
     </div>
-
-    <div class="skill-tags">
-      <strong>Visualization & BI</strong>
-      <span>Power BI</span><span>Tableau</span><span>matplotlib</span><span>seaborn</span><span>ggplot2</span>
+    <div>
+      <strong>Visualization & BI</strong><br>
+      Power BI, Tableau, matplotlib, seaborn, ggplot2
     </div>
-
-    <div class="skill-tags">
-      <strong>Deployment & Tools</strong>
-      <span>Flask</span><span>Heroku</span><span>Git/GitHub</span><span>Microsoft Visio</span>
+    <div>
+      <strong>Deployment & Tools</strong><br>
+      Flask, Heroku, Git/GitHub, Microsoft Visio
     </div>
-
-    <div class="skill-tags">
-      <strong>Domains</strong>
-      <span>Finance Analytics</span><span>Liquidity & Treasury</span><span>Hedge Funds</span>
-      <span>Automation</span><span>Dashboards</span>
+    <div>
+      <strong>Domains</strong><br>
+      Finance Analytics, Liquidity & Treasury, Hedge Funds, Automation, Dashboards
     </div>
-  </section>
+  </div>
+</section>
+
 
   <section id="experience" class="distinct-section fade-in">
     <h2>Experience</h2>
