--- a/index.html
+++ b/index.html
@@ -41,33 +41,16 @@
 </section>
 
 
-  <!-- SKILLS SECTION -->
-  <section id="skills" class="distinct-section fade-in">
+<section id="skills" class="distinct-section fade-in">
   <h2>Skills</h2>
-  <div class="skills-grid">
-    <div>
-      <strong>Languages</strong><br>
-      Python, SQL, R, C
-    </div>
-    <div>
-      <strong>Data Science & ML</strong><br>
-      pandas, NumPy, scikit-learn, PyTorch
-    </div>
-    <div>
-      <strong>Visualization & BI</strong><br>
-      Power BI, Tableau, matplotlib, seaborn, ggplot2
-    </div>
-    <div>
-      <strong>Deployment & Tools</strong><br>
-      Flask, Heroku, Git/GitHub, Microsoft Visio
-    </div>
-    <div>
-      <strong>Domains</strong><br>
-      Finance Analytics, Liquidity & Treasury, Hedge Funds, Automation, Dashboards
-    </div>
+  <div class="skills-list">
+    <div><strong>Languages:</strong> Python, SQL, R, Java, JavaScript, C</div>
+    <div><strong>Data Science & ML:</strong> pandas, NumPy, scikit-learn, PyTorch, Recommenders, Linear Regression, LLM Evaluation</div>
+    <div><strong>Visualization & BI:</strong> Power BI, Tableau, matplotlib, seaborn, ggplot2</div>
+    <div><strong>Deployment & Tools:</strong> Flask, Heroku, Git/GitHub, Microsoft Visio</div>
+    <div><strong>Domains:</strong> Finance Analytics, Liquidity & Treasury, Hedge Funds, Automation, Dashboards</div>
   </div>
 </section>
-
 
   <section id="experience" class="distinct-section fade-in">
     <h2>Experience</h2>
