--- a/index.html
+++ b/index.html
@@ -55,96 +55,104 @@
   <section id="experience" class="distinct-section fade-in">
     <h2>Experience</h2>
 
-    <!-- BNY – Hedge Funds Analyst -->
-    <div class="exp-card">
-      <div class="exp-header">
-        <img src="assets/bny-logo.jpg" alt="BNY" class="exp-logo">
-        <div class="exp-info">
-          <h3>BNY Mellon</h3>
-          <p class="exp-title">Hedge Funds Analyst — Aug 2025 – Present</p>
-        </div>
-      </div>
-      <ul class="exp-list">
-        <li>Built a <strong>Power BI</strong> dashboard tracking digital tool usage; quantified <strong>100+ hours saved/month</strong>.</li>
-        <li>Modernizing hedge fund workflows to drive automation and risk reduction across <strong>$50B+ AUM</strong>.</li>
-      </ul>
-      <div class="skill-tags">
-        <span>Power BI</span><span>Python</span><span>SQL</span><span>Automation</span>
-      </div>
-    </div>
+    <section id="experience" class="distinct-section fade-in">
+  <h2>Experience</h2>
 
-    <!-- BNY – Global Compliance & Risk -->
-    <div class="exp-card">
-      <div class="exp-header">
-        <img src="assets/bny-logo.jpg" alt="BNY" class="exp-logo">
-        <div class="exp-info">
-          <h3>BNY Mellon</h3>
-          <p class="exp-title">Global Compliance & Risk Analyst Intern — Jun 2024 – Aug 2024</p>
-        </div>
-      </div>
-      <ul class="exp-list">
-        <li>Built <strong>Power BI</strong> dashboards for liquidity & cash management, giving visibility into <strong>thousands of daily transactions</strong>.</li>
-        <li>Created <strong>Visio</strong> maps for <strong>10+</strong> treasury workflows; highlighted automation opportunities.</li>
-      </ul>
-      <div class="skill-tags">
-        <span>Power BI</span><span>Liquidity</span><span>Cash Management</span><span>Visio</span>
+  <!-- BNY – Hedge Funds Analyst -->
+  <div class="exp-card">
+    <div class="exp-header">
+      <img src="assets/bny-logo.jpg" alt="BNY" class="exp-logo">
+      <div class="exp-info">
+        <h3>BNY Mellon</h3>
+        <p class="exp-title">Hedge Funds Analyst — Aug 2025 – Present</p>
       </div>
     </div>
+    <ul class="exp-list">
+      <li>Built a <strong>Power BI</strong> dashboard to track digital tool adoption; surfaced <strong>100+ analyst hours/month</strong> in efficiency gains.</li>
+      <li>Drove workflow modernization in hedge fund administration touching portfolios of <strong>$50B+ AUM</strong>.</li>
+      <li>Partnered with senior analysts to prioritize automation opportunities aligned to business goals.</li>
+    </ul>
+    <div class="skill-tags">
+      <span>Power BI</span><span>Python</span><span>SQL</span><span>Automation</span>
+    </div>
+  </div>
 
-    <!-- UCF – Research Assistant -->
-    <div class="exp-card">
-      <div class="exp-header">
-        <img src="assets/ucf-logo.png" alt="UCF" class="exp-logo">
-        <div class="exp-info">
-          <h3>University of Central Florida</h3>
-          <p class="exp-title">Data Analytics Research Assistant — Aug 2024 – May 2025</p>
-        </div>
-      </div>
-      <ul class="exp-list">
-        <li>Engineered a <strong>Power BI</strong> dashboard tracking contracts for <strong>926</strong> grad students with real-time status.</li>
-        <li>Automated cumulative/weekly views; cut manual tracking by ~<strong>40%</strong> across <strong>10+ departments</strong>.</li>
-      </ul>
-      <div class="skill-tags">
-        <span>Power BI</span><span>Predictive Analytics</span><span>Data Visualization</span>
+  <!-- BNY – Global Compliance & Risk -->
+  <div class="exp-card">
+    <div class="exp-header">
+      <img src="assets/bny-logo.jpg" alt="BNY" class="exp-logo">
+      <div class="exp-info">
+        <h3>BNY Mellon</h3>
+        <p class="exp-title">Global Compliance & Risk Analyst Intern — Jun 2024 – Aug 2024</p>
       </div>
     </div>
+    <ul class="exp-list">
+      <li>Created <strong>Power BI</strong> dashboards for liquidity & cash management, giving real-time visibility into <strong>thousands of daily transactions</strong>.</li>
+      <li>Documented and standardized <strong>10+</strong> treasury workflows in <strong>Visio</strong>, providing a blueprint for automation.</li>
+      <li>Worked with compliance leaders to pinpoint bottlenecks impacting screening and reporting speed.</li>
+    </ul>
+    <div class="skill-tags">
+      <span>Power BI</span><span>Liquidity</span><span>Cash Management</span><span>Visio</span>
+    </div>
+  </div>
 
-    <!-- Limbitless Solutions -->
-    <div class="exp-card">
-      <div class="exp-header">
-        <img src="assets/limbitless-logo.jpeg" alt="Limbitless Solutions" class="exp-logo">
-        <div class="exp-info">
-          <h3>Limbitless Solutions</h3>
-          <p class="exp-title">Data & Research Intern — May 2023 – Dec 2023</p>
-        </div>
-      </div>
-      <ul class="exp-list">
-        <li>Created <strong>R</strong> visualizations (<em>dplyr</em>, <em>ggplot2</em>) showing a <strong>10%+</strong> lift in pediatric engagement.</li>
-        <li>Contributed to a manuscript <strong>(pending publication)</strong> on reinforcement-learning agents for rehab gaming.</li>
-      </ul>
-      <div class="skill-tags">
-        <span>R</span><span>dplyr</span><span>ggplot2</span><span>Reinforcement Learning</span>
+  <!-- UCF – Research Assistant -->
+  <div class="exp-card">
+    <div class="exp-header">
+      <img src="assets/ucf-logo.png" alt="UCF" class="exp-logo">
+      <div class="exp-info">
+        <h3>University of Central Florida</h3>
+        <p class="exp-title">Data Analytics Research Assistant — Aug 2024 – May 2025</p>
       </div>
     </div>
+    <ul class="exp-list">
+      <li>Designed a <strong>Power BI</strong> system tracking contracts for <strong>926</strong> grad students with real-time status views.</li>
+      <li>Automated weekly/cumulative reporting, cutting manual tracking by ~<strong>40%</strong> across <strong>10+ departments</strong>.</li>
+      <li>Introduced predictive insights to flag engagement risks earlier for faculty and administrators.</li>
+    </ul>
+    <div class="skill-tags">
+      <span>Power BI</span><span>Predictive Analytics</span><span>Data Visualization</span>
+    </div>
+  </div>
 
-    <!-- Data Glacier -->
-    <div class="exp-card">
-      <div class="exp-header">
-        <img src="assets/dg-logo.png" alt="Data Glacier" class="exp-logo">
-        <div class="exp-info">
-          <h3>Data Glacier</h3>
-          <p class="exp-title">Data Science Intern — May 2023 – Aug 2023</p>
-        </div>
-      </div>
-      <ul class="exp-list">
-        <li>Deployed a <strong>Flask + Heroku</strong> app hosting a <strong>linear regression</strong> model trained on <strong>10K+</strong> records.</li>
-        <li>Transformed & analyzed <strong>50K+</strong> cab records in Python; comparative analysis surfaced key investment factors.</li>
-      </ul>
-      <div class="skill-tags">
-        <span>Python</span><span>Flask</span><span>Heroku</span><span>ETL</span>
+  <!-- Limbitless Solutions -->
+  <div class="exp-card">
+    <div class="exp-header">
+      <img src="assets/limbitless-logo.jpeg" alt="Limbitless Solutions" class="exp-logo">
+      <div class="exp-info">
+        <h3>Limbitless Solutions</h3>
+        <p class="exp-title">Data & Research Intern — May 2023 – Dec 2023</p>
       </div>
     </div>
-  </section>
+    <ul class="exp-list">
+      <li>Analyzed gamified prosthetic training data; <strong>R</strong> visualizations (<em>ggplot2</em>, <em>dplyr</em>) showed a <strong>10%+</strong> lift in pediatric engagement.</li>
+      <li>Contributed to a manuscript <strong>(pending publication)</strong> on reinforcement-learning agents improving rehabilitation gaming.</li>
+      <li>Translated technical ML concepts into clear findings for non-technical stakeholders.</li>
+    </ul>
+    <div class="skill-tags">
+      <span>R</span><span>ggplot2</span><span>dplyr</span><span>Reinforcement Learning</span>
+    </div>
+  </div>
+
+  <!-- Data Glacier -->
+  <div class="exp-card">
+    <div class="exp-header">
+      <img src="assets/dg-logo.png" alt="Data Glacier" class="exp-logo">
+      <div class="exp-info">
+        <h3>Data Glacier</h3>
+        <p class="exp-title">Data Science Intern — May 2023 – Aug 2023</p>
+      </div>
+    </div>
+    <ul class="exp-list">
+      <li>Deployed a <strong>Flask + Heroku</strong> app hosting a <strong>linear regression</strong> model trained on <strong>10K+</strong> records.</li>
+      <li>Transformed & analyzed <strong>50K+</strong> cab ride records in Python; comparative analysis surfaced key investment factors.</li>
+      <li>Practiced reproducible workflows: version control, documentation, and clear presentation of results.</li>
+    </ul>
+    <div class="skill-tags">
+      <span>Python</span><span>Flask</span><span>Heroku</span><span>ETL</span>
+    </div>
+  </div>
+</section>
 
   <section id="projects" class="distinct-section fade-in">
     <h2>Projects</h2>
