--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <!-- Data Glacier -->
   <div class="exp-card">
     <div class="exp-header">
-      <img src="assets/dg-logo.png" alt="Data Glacier" class="exp-logo">
+      <img src="assets/dataglacier.png" alt="Data Glacier" class="exp-logo">
       <div class="exp-info">
         <h3>Data Glacier</h3>
         <p class="exp-title">Data Science Intern — May 2023 – Aug 2023</p>
